[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/dialogue/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://gui/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://gui/dialogue/proceed_indicator.png" type="Texture" id=3]
[ext_resource path="res://gui/dialogue/BlipTimer.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
skew = Vector2( 0.3, 0 )

[node name="DialogueBox" type="Control"]
margin_right = 480.0
margin_bottom = 270.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="BoxPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -87.0
margin_right = 200.0
margin_bottom = -10.0

[node name="Panel" type="Panel" parent="BoxPanel"]
margin_left = 5.0
margin_top = -20.0
margin_right = 100.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="CharacterName" type="Label" parent="BoxPanel/Panel"]
unique_name_in_owner = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 4.0
margin_top = -9.0
margin_right = -6.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Alex"

[node name="DialogueText" type="RichTextLabel" parent="BoxPanel"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -27.0
margin_right = 180.0
margin_bottom = 27.0
size_flags_horizontal = 3
visible_characters = 0
percent_visible = 0.0
text = "Dies ist ein langer Text, der lang ist und lang ist und lang ist, sehr sehr lang ist und ich spreche ihn gerade aus."
scroll_active = false

[node name="ProceedIndicator" type="TextureRect" parent="BoxPanel"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -14.0
margin_top = -14.0
margin_right = -6.0
margin_bottom = -6.0
texture = ExtResource( 3 )
expand = true

[node name="Timer" type="Timer" parent="BoxPanel/ProceedIndicator"]
wait_time = 0.4
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="BlipTimers" type="Node" parent="."]

[node name="TimerDavid" type="Timer" parent="BlipTimers"]
process_mode = 0
wait_time = 0.22
autostart = true
script = ExtResource( 4 )
animation_duration_per_char = 0.008

[node name="TimerPorkus" type="Timer" parent="BlipTimers"]
process_mode = 0
wait_time = 0.28
autostart = true
script = ExtResource( 4 )
animation_duration_per_char = 0.03
sound_file = [ "porkus_blip_1.wav", "porkus_blip_2.wav" ]

[node name="TimerAlex" type="Timer" parent="BlipTimers"]
process_mode = 0
wait_time = 0.25
autostart = true
script = ExtResource( 4 )
sound_file = [ "alex_blip_1.wav", "alex_blip_2.wav" ]

[node name="TimerZehotath" type="Timer" parent="BlipTimers"]
wait_time = 0.27
autostart = true
script = ExtResource( 4 )
animation_duration_per_char = 0.05
sound_file = [ "time_stealer_blip.wav" ]

[node name="TimerGandalf" type="Timer" parent="BlipTimers"]
wait_time = 0.24
autostart = true
script = ExtResource( 4 )
animation_duration_per_char = 0.04
